# EmuPs2

./: .gitignore  .gitmodules  CMakeLists.txt
EmuCore/: CMakeLists.txt
EmuCore/src/: EmuCore.h  emupch.cpp  emupch.h
EmuCore/src/core/: Emulator.cpp  Emulator.h
EmuUI/: CMakeLists.txt
EmuUI/src/: EmuUI.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
